<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText"
               android:hint="@string/hint_title_required"
               android:imeOptions="actionNext"
               android:inputType="textCapWords"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/yearTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText2"
               android:hint="@string/hint_year"
               android:imeOptions="actionNext"
               android:inputType="number"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ratingTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText3"
               android:hint="@string/hint_rating"
               android:imeOptions="actionNext"
               android:inputType="textCapCharacters"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lengthTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText4"
               android:hint="@string/hint_length"
               android:imeOptions="actionNext"
               android:inputType="number"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/directorTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText5"
               android:hint="@string/hint_director"
               android:imeOptions="actionNext"
               android:inputType="textCapWords|textPersonName"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scoreTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText6"
               android:hint="@string/hint_score"
               android:imeOptions="actionNext"
               android:inputType="number"/>
         </android.support.design.widget.TextInputLayout>

      </LinearLayout>
   </ScrollView>

   <android.support.design.widget.FloatingActionButton
      android:id="@+id/saveFloatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="top|end"
      android:layout_margin="@dimen/fab_margin"
      android:src="@drawable/ic_save_24dp"/>

</FrameLayout>
